fix: transformLabelWithCodicon white space (#2600)

--- a/packages/status-bar/src/browser/status-bar.module.less
+++ b/packages/status-bar/src/browser/status-bar.module.less
@@ -71,6 +71,7 @@
 .popover_item {
   display: flex;
   align-items: center;
+  white-space: pre;
 }
 
 .popover_content,
